[FIX] Влезаем в лаунчер через agent. (#202)
* [FIX] Правки градла.

* [FEATURE] Скрипт для скачивания.

* [DOCS] Правки readme.

* [FIX][DOCS] Удален неактуальная папка docs.

* [DOCS] Готов readme.

* [FIX] Launcher sign.

* [FEATURE] Модули по новому.

* [FIX] Способ влезть в лаунчер через agent.

* [ANY] Обновлены модули (там фикс JarSigner).

* [FEATURE] ListDownloader.